fix(website): fix code examples on certain screen sizes
Depending on the font and the viewport size, the code examples on
https://quick-lint-js.com/blog/version-1.0/ might overflow. This
happens on Firefox on my macOS machine, but not on Firefox on my Linux
machine.

Tweak the CSS breakpoint to prevent overflowing.

--- a/website/public/main.css
+++ b/website/public/main.css
@@ -809,7 +809,9 @@ kbd.keystroke {
   #editors-support img {
     padding-bottom: 1rem;
   }
+}
 
+@media only screen and (max-width: 46em) {
   .eslint-comparison {
     border-bottom: solid 1px #aaaa;
     grid-template-areas: "eslint" "qljs";
